--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "build:ui": "cd ..\\Fullstackopen\\Osa2\\puhelinluettelo && npm run build --prod && xcopy /e build ..\\..\\..\\Fullstackopen-Osa3\\build\\",
-    "send:all": "git add . && git commit -a -m 'Herokuun' && git push heroku main",
+    "send:all": "git add . && git commit -a -m \"Herokuun\"' && git push heroku main",
     "heroku:log": "heroku logs --tail"
   },
   "repository": {
@@ -23,7 +23,10 @@
   "homepage": "https://github.com/Henzii/Fullstackopen-Osa3#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.1",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
